--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -22,8 +22,11 @@ jobs:
         run: |
           mkdir -p build
           helm repo index build --url "https://pnminh.github.io/helm-repo"
-          for dir in charts/* ; do
-            helm package -d build "$dir"
+          for dir in /* ; do
+            if [ -f "$dir/Chart.yaml" ]; then
+              helm dependency update "$dir"
+              helm package -d build "$dir"
+            fi
           done
 
       - name: Clone Helm repository
