--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -23,6 +23,7 @@ jobs:
           mkdir -p build
           helm repo index build --url "https://pnminh.github.io/helm-repo"
           for dir in /* ; do
+            echo $dir
             if [ -f "$dir/Chart.yaml" ]; then
               helm dependency update "$dir"
               helm package -d build "$dir"
