--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir -p build
           helm repo index build --url "https://pnminh.github.io/helm-repo"
-          for dir in /* ; do
+          for dir in ./* ; do
             echo $dir
             if [ -f "$dir/Chart.yaml" ]; then
               helm dependency update "$dir"
