--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Helm
         uses: azure/setup-helm@v1
@@ -31,7 +31,7 @@ jobs:
           done
 
       - name: Clone Helm repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: pnminh/helm-repo
           ref: main
@@ -45,8 +45,8 @@ jobs:
       - name: Commit and push changes
         run: |
           cd helm-repo
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m "Update Helm charts and index" || exit 0
           git push origin main
