--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -49,4 +49,5 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "Update Helm charts and index" || exit 0
-          git push https://$GH_ACTIONS_TOKEN@github.com/pnminh/helm-repo.git main
+          git config --unset-all http.https://github.com/.extraheader
+          git push https://github.com/pnminh/helm-repo.git main
