still issue with access

--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -50,4 +50,4 @@ jobs:
           git add .
           git commit -m "Update Helm charts and index" || exit 0
           git config --unset-all http.https://github.com/.extraheader
-          git push https://github.com/pnminh/helm-repo.git main
+          git push token:$GH_ACTIONS_TOKEN@https://github.com/pnminh/helm-repo.git main
