--- a/app-deployment/templates/route.yaml
+++ b/app-deployment/templates/route.yaml
@@ -15,3 +15,23 @@ spec:
     termination: edge
   wildcardPolicy: None
 {{- end }}
+{{- if .Values.blueGreen.enabled }}
+  {{- if .Values.blueGreen.previewRoute.enabled }}
+---
+kind: Route
+apiVersion: route.openshift.io/v1
+metadata:
+  name: {{ .Release.Name }}-preview
+spec:
+  host: {{ .Values.blueGreen.previewRoute.host | default "" }}
+  to:
+    kind: Service
+    name: {{ .Release.Name }}-preview
+    weight: 100
+  port:
+    targetPort: {{ .Values.route.targetPort }}
+  tls:
+    termination: edge
+  wildcardPolicy: None
+  {{- end }}
+{{- end }}
