--- a/app-deployment/templates/service.yaml
+++ b/app-deployment/templates/service.yaml
@@ -15,6 +15,7 @@ spec:
 {{- if .Values.blueGreen.enabled }}
 ---
 kind: Service
+apiVersion: v1
 metadata:
   name: {{ .Release.Name }}-preview
   labels:
