--- a/app-deployment/templates/deployment.yaml
+++ b/app-deployment/templates/deployment.yaml
@@ -42,6 +42,32 @@ spec:
       serviceAccountName: {{ include "library-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+      {{- if .Values.azKeyVault.enabled }}
+        - name: azure-keyvault-retriever
+          image: {{ .Values.azKeyVault.image.path }}:{{ .Values.azKeyVault.image.tag }}
+          env:
+            - name: AZURE_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.azKeyVault.loginSecretName }}
+                  key: azureClientId
+            - name: AZURE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.azKeyVault.loginSecretName }}
+                  key: azureClientSecret
+            - name: AZURE_TENANT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.azKeyVault.loginSecretName }}
+                  key: azureTenantId
+            - name: KEY_VAULT_NAMES
+              value: "{{ .Values.azKeyVault.vaultKeys | join "," }}"
+          volumeMounts:
+            - name: secrets-volume
+              mountPath: /secrets
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -66,13 +92,21 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- with .Values.volumeMounts }}
           volumeMounts:
+          {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
+            {{- if .Values.azKeyVault.enabled }}
+            - name: secrets-volume
+              mountPath: /secrets            
+            {{- end }}
           {{- end }}
-      {{- with .Values.volumes }}
       volumes:
+      {{- with .Values.volumes }}
         {{- toYaml . | nindent 8 }}
+        {{- if .Values.azKeyVault.enabled }}
+        - name: secrets-volume
+          emptyDir: {}
+        {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
