--- a/app-deployment/templates/deployment.yaml
+++ b/app-deployment/templates/deployment.yaml
@@ -80,6 +80,10 @@ spec:
           env :
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- with .Values.command }}
+          command :
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.ports }}
           ports:
             {{- toYaml . | nindent 12 }}
