key vault for k8s-job

--- a/app-deployment/templates/deployment.yaml
+++ b/app-deployment/templates/deployment.yaml
@@ -1,128 +1,1 @@
-{{- if .Values.blueGreen.enabled }}
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
-{{- else }}
-apiVersion: apps/v1
-kind: Deployment
-{{- end }}
-metadata:
-  name: {{ .Release.Name }}
-  labels:
-    {{- include "library-chart.labels" . | nindent 4 }}
-spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
-  strategy:
-  {{- if .Values.blueGreen.enabled }}
-    blueGreen:
-      activeService: {{ .Release.Name }}  # Name of the active service
-      previewService: {{ .Release.Name }}-preview # Name of the preview service
-      autoPromotionEnabled: {{ .Values.blueGreen.autoPromotionEnabled | default "false"  }}
-  {{- end}}
-  selector:
-    matchLabels:
-      {{- include "library-chart.selectorLabels" . | nindent 6 }}
-  template:
-    metadata:
-      {{- with .Values.podAnnotations }}
-      annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      labels:
-        {{- include "library-chart.labels" . | nindent 8 }}
-        {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
-    spec:
-      {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      serviceAccountName: {{ include "library-chart.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      initContainers:
-      {{- if .Values.azKeyVault.enabled }}
-        - name: azure-keyvault-retriever
-          image: {{ .Values.azKeyVault.image.path }}:{{ .Values.azKeyVault.image.tag }}
-          env:
-            - name: AZURE_CLIENT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.azKeyVault.loginSecretName }}
-                  key: azureClientId
-            - name: AZURE_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.azKeyVault.loginSecretName }}
-                  key: azureClientSecret
-            - name: AZURE_TENANT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.azKeyVault.loginSecretName }}
-                  key: azureTenantId
-            - name: KEY_VAULT_NAMES
-              value: "{{ .Values.azKeyVault.vaultKeys | join "," }}"
-            - name: SECRET_FILE_DIR
-              value: "{{ .Values.azKeyVault.secretFileDir }}"
-          volumeMounts:
-            - name: secrets-volume
-              mountPath: {{ .Values.azKeyVault.secretFileDir}}
-      {{- end }}
-      containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.registry }}/{{ .Values.image.path }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- with .Values.env }}
-          env :
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.command }}
-          command :
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- with .Values.ports }}
-          ports:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- if .Values.livenessProbe }}
-          livenessProbe:
-            {{- toYaml .Values.livenessProbe | nindent 12 }}
-          {{- end }}
-          {{- if .Values.readinessProbe }}
-          readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
-          {{- end }}
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-          volumeMounts:
-          {{- with .Values.volumeMounts }}
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-          {{- if .Values.azKeyVault.enabled }}
-            - name: secrets-volume
-              mountPath: {{ .Values.azKeyVault.secretFileDir}}           
-          {{- end }}
-      volumes:
-      {{- with .Values.volumes }}
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- if .Values.azKeyVault.enabled }}
-        - name: secrets-volume
-          emptyDir: {}
-      {{- end }}
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+{{- include "library-chart.createDeployment" . }}
