--- a/k8s-job/values.yaml
+++ b/k8s-job/values.yaml
@@ -18,3 +18,13 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 resources: {}
+
+azKeyVault:
+  enabled: false
+  loginSecretName: azure-creds #OCP secret that has Azure creds
+  vaultKeys: # Vault Keys to retrieve secrets from
+    - ocp-secrets
+  image: #image used for retrieving AZ Key Vault secrets
+    path: docker.wwt.com/az-keyvault
+    tag: main-ae7190d
+  secretFileDir: /secrets #secrets location to be shared between containers
